--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   trigger-jenkins:
     runs-on: ubuntu-latest
-    environment: jenkins-trigger    # <- REQUIRED to access environment secrets
+    environment: bloodlink-env
     steps:
       - name: Checkout
         uses: actions/checkout@v4
